# api/openapi.yaml
@@ -6,26 +6,6 @@ info:
 
 paths:
 
-  # auth
-
-  /api/me:
-    get:
-      summary: Sign in
-      tags:
-        - Auth
-      security:
-        - userAuth: []
-      responses:
-        '200':
-          description: Me
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Me'
-        '401':
-          description: Unauthorized
-
-
   # groups
 
   /api/groups:
@@ -133,6 +113,53 @@ paths:
           description: The group was deleted
         '404':
           description: The group was not found
+
+  # me
+
+  /api/me:
+    get:
+      summary: The information of the user
+      tags:
+        - Me
+      security:
+        - userAuth: []
+      responses:
+        '200':
+          description: Me
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Me'
+        '401':
+          description: Unauthorized
+        '403':
+          description: User not found in the group
+
+  /api/me/cart:
+    get:
+      summary: The cart of the user
+      tags:
+        - Me
+      security:
+        - userAuth: []
+      parameters:
+        - in: path
+          name: userId
+          schema:
+            type: string
+          required: true
+          description: The user id
+      responses:
+        '200':
+          description: The list of the gifts offered by the user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CartListItem'
+        '404':
+          description: Cart not available for anonymous user
 
   # users
 
@@ -429,31 +456,6 @@ paths:
         '404':
           description: The gift was not found
 
-  # cart
-
-  /api/users/{userId}/cart:
-    get:
-      summary: The cart of the user
-      tags:
-        - Cart
-      security:
-        - userAuth: []
-      parameters:
-        - in: path
-          name: userId
-          schema:
-            type: string
-          required: true
-          description: The user id
-      responses:
-        '200':
-          description: The list of the gifts offered by the user
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/CartListItem'
   # export
 
   /api/export:
