# api/src/main.ts
@@ -4,20 +4,18 @@ import { readFileSync } from 'fs'
 import helmet from 'helmet'
 import morgan from 'morgan'
 import passport from 'passport'
+import path from 'path'
 import { JsonObject, serve, setup } from 'swagger-ui-express'
 import * as YAML from 'yaml'
-import { AdminStrategy, AuthenticatedUsed, UserStrategy } from './auth'
-import { cartController } from './controllers/cart.controller'
+import { AdminStrategy, UserStrategy } from './auth'
 import { exportController } from './controllers/export.controller'
 import { giftController } from './controllers/gift.controller'
 import { groupController } from './controllers/group.controller'
 import { importController } from './controllers/import.controller'
+import { meController } from './controllers/me.controller'
 import { userController } from './controllers/user.controller'
-import { db } from './db'
 import { errorHandler } from './error-handler'
-import { User } from './generated/client'
 import { logger } from './logger'
-import path from 'path'
 
 const app = express()
 app.use(helmet({
@@ -48,49 +46,19 @@ app.use((req, res, next) => {
 app.use(urlencoded({ extended: false }))
 
 // swagger
-if (process.env.NODE_ENV === 'development') {
-  const openapiFile = readFileSync('./openapi.yaml', 'utf8')
-  const swaggerDocument = YAML.parse(openapiFile) as JsonObject
-
-  app.use('/api/swagger', serve, setup(swaggerDocument))
-}
+const openapiFile = readFileSync('./openapi.yaml', 'utf8')
+const swaggerDocument = YAML.parse(openapiFile) as JsonObject
+app.use('/api/swagger', serve, setup(swaggerDocument))
 
 // authentication
 passport.use('admin', AdminStrategy)
 passport.use('user', UserStrategy)
 
-app.get(
-  '/api/me',
-  // eslint-disable-next-line @typescript-eslint/no-unsafe-argument
-  passport.authenticate('user', { session: false }),
-  async (req, res) => {
-    const group: string = (req.user as AuthenticatedUsed).group
-    const userId: string | undefined = (req.user as AuthenticatedUsed).id
-
-    const me: { group: string, name?: string, id?: string, picture?: string | null } = {
-      group: group
-    }
-
-    if (userId) {
-      const user: User | null = await db.user.findUnique({
-        where: { id: userId, groups: { some: { groupName: group } } }
-      })
-
-      if (user) {
-        me.id = user.id
-        me.name = user.name
-        me.picture = user.picture
-      }
-    }
-
-    res.status(200).send(me)
-  })
-
 // controllers
 app.use('/api/', groupController)
+app.use('/api/', meController)
 app.use('/api/', userController)
 app.use('/api/', giftController)
-app.use('/api/', cartController)
 app.use('/api/', exportController)
 app.use('/api/', importController)
 
